--- a/PocketMortuary/app/src/main/res/layout/activity_add_body.xml
+++ b/PocketMortuary/app/src/main/res/layout/activity_add_body.xml
@@ -12,8 +12,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="72dp"
         android:ems="10"
+        android:hint="BodyID"
         android:inputType="textPersonName"
-        android:text="BodyID"
         app:layout_constraintHorizontal_bias="0.566"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -27,8 +27,8 @@
         android:layout_marginLeft="72dp"
         android:layout_marginTop="88dp"
         android:ems="10"
+        android:hint="введите описание тела"
         android:inputType="textMultiLine"
-        android:text="введите описание тела"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etBodyID" />
